compiler/tests/pass/path_keywords/kernel/vga.afns
package kernel.vga;

fn noop_kernel() -> i32 {
    return 0;
}
