compiler/tests/fail/private_import/lib/api.afns
package lib.api;

fn hidden() -> i32 {
    return 7;
}

pub fn shown() -> i32 {
    return hidden();
}
